package com.jovisco.pdf.core;

import java.io.IOException;

public interface PdfElement {
    void print() throws IOException;
}
